# Home-Credit_Default_Risk

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
notebooks/: 01_EDA.ipynb  02_preprocessing.ipynb  03_modelling.ipynb  config.py  feature_names.json  mlflow.db  removed_feat.json
src/: data_ingestion.py  hyperparam_tuning.py
